# Kursovaya_OOP

./: .gitignore  main.py  pyproject.toml
data/: vacancies.json
src/: api_classes.py  config.py  db_create.py  db_manager.py  savers.py  utils.py  vacancy.py
tests/: conftest.py  test_api_classes.py  test_savers.py  test_utils.py  test_vacancy.py
